(7)MessageSource를 이용한 Exception처리 - Spring에서는 다국어처리 i18n세팅지원, LocaleChangeInterceptor 이용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,6 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  messages:
+    basename: i18n/exception
+    encoding: UTF-8
