--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     username: sa
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
-    properties.hibernate.hbm2ddl.auto: create
+    properties.hibernate.hbm2ddl.auto: none
     showSql: true
   mvc:
     pathmatch:
@@ -16,3 +16,5 @@ spring:
   messages:
     basename: i18n/exception
     encoding: UTF-8
+  jwt:
+    secret: govlepel@$&
